# fedex-green-router

./: .env.temp  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  reorganize.ps1  requirements.txt  run_tests.py  test_demo.py
config/: settings.py
data_collection/: __init__.py  collectors.py  models.py
error_handling/: exceptions.py  handlers.py  models.py
feedback/: feedback_handler.py
frontend/: .env  package-lock.json  package.json
ml_layer/: route_predictor.py
models/: __init__.py  location.py  preferences.py  route.py
monitoring/: models.py
persistence/: db_handler.py
preferences/: api.py
python_backend/: __init__.py  main.py  pyproject.toml  requirements.txt  test_feedback.py  test_ml_layer.py
python_backend/app/api/: auth.py  models.py  vehicle_api.py
python_backend/app/api/metrics/: __init__.py
python_backend/app/api/route_engine/: __init__.py
python_backend/app/api/security/: __init__.py
python_backend/app/api/vehicle/: __init__.py
python_backend/app/core/: vehicle.py
python_backend/app/db/: cache_manager.py  db_handler.py  migration_manager.py
python_backend/app/db/persistence/: __init__.py
python_backend/app/services/: emissions_calculator.py  user_preferences.py
python_backend/app/utils/: error_handler.py  metrics_collector.py  validators.py
python_backend/app/utils/error_handling/: exceptions.py  handlers.py
route_engine/: api.py  metrics_api.py  route_optimizer.py
security/: auth_api.py
tests/: conftest.py  test_data_collection.py  test_emissions.py  test_error_handling.py  test_monitoring.py  (+4 more)
(+17 files in other folders)
