[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedex-green-router"
version = "0.1.0"
description = "FedEx Green Router - Intelligent routing system with environmental considerations"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "motor>=3.3.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"] 